Fix for dot dot and read more description text overlapping before js is fully loaded

--- a/airbitz/airbitz/static/less/business-info.less
+++ b/airbitz/airbitz/static/less/business-info.less
@@ -99,6 +99,9 @@
         .biz-website {
         }
     }
+    .biz-description {
+        opacity: 0;
+    }
 }
 
 .biz-info-three {
